--- a/styles/styles.css
+++ b/styles/styles.css
@@ -3,5 +3,92 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto');
 
 body{
-	font-family: 'Roboto', sans-serif;
+	font-family: 'Athelas', sans-serif;
+	background-color: white;
+	margin: 0px;
 }
+
+body, html {
+    height: 100%;
+}
+
+/* Style the header with a grey background and some padding */
+.header {
+    overflow: hidden;
+    background-color: #FEB631;
+    padding: 20px 20px;
+}
+
+/* Style the header links */
+.header a {
+    float: left;
+    color: white;
+    text-align: center;
+    padding: 12px;
+    text-decoration: none;
+    font-size: 20px; 
+    line-height: 25px;
+    border-radius: 2px;
+}
+
+/* Style the logo link (notice that we set the same value of line-height and font-size to prevent the header to increase when the font gets bigger */
+.header a.logo img {
+  height: 30px;
+}
+
+/* Change the background color on mouse-over */
+.header a:hover {
+    color: black;
+}
+
+/* Float the link section to the right */
+.header-right {
+    float: right;
+}
+
+/* Add media queries for responsiveness - when the screen is 500px wide or less, stack the links on top of each other */ 
+@media screen and (max-width: 500px) {
+  .header a {
+      float: none;
+      display: block;
+      text-align: left;
+  }
+  .header-right {
+      float: none;
+  }
+}
+
+/* The hero image */
+.hero-image {
+    /* Use "linear-gradient" to add a darken background effect to the image (photographer.jpg). This will make the text easier to read */
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../images/sol.jpg");
+
+    /* Set a specific height */
+    height: 87%;
+
+    /* Position and center the image to scale nicely on all screens */
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
+}
+
+/* Place text in the middle of the image */
+.hero-text {
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: white;
+	font-size: 30px;
+}
+
+.copy{
+	color: gray;
+	text-align: center;
+	margin-bottom: 10px;
+}
+
+
+
